sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:9: error: not found: value idx
		v = getValeur(idx:Int)
                              ^